HelloUltraviolet/Fixtures/RejectedSource/Expressions/YieldFromErrorMismatch/Expected.uv
//! Expected diagnostic metadata for the YieldFromErrorMismatch rejected-source specimen.

expectedDiagnostic("E-CON-0225", "rule.21.YieldFrom-ErrType-Err")
